cncProd/force-app/main/default/objects/Outstanding_Accessory__c/Outstanding_Accessory__c.object-meta.xml
<CustomObject>
    <label>Outstanding Accessory</label>
    <nameField>
        <displayFormat>SAOA-{000000}</displayFormat>
        <label>Outstanding Accessories Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Outstanding Accessories</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>