cncProd/force-app/main/default/objects/Outstanding_Accessory__c/fields/Defect_Header__c.field-meta.xml
<CustomField>
    <fullName>Defect_Header__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Defect Header</label>
    <referenceTo>Defect_Header__c</referenceTo>
    <relationshipLabel>Outstanding Accessories</relationshipLabel>
    <relationshipName>Outstanding_Accessories</relationshipName>
    <type>Lookup</type>
</CustomField>