cncProd/force-app/main/default/objects/Outstanding_Accessory__c/fields/SAAccessory__c.field-meta.xml
<CustomField>
    <fullName>SAAccessory__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>SA Accessory</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>SA_Accessory__c.Sales_Agreement__c</field>
            <operation>equals</operation>
            <valueField>$Source.Sales_Agreement__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>SA_Accessory__c</referenceTo>
    <relationshipLabel>Outstanding Accessories</relationshipLabel>
    <relationshipName>Outstanding_Accessories</relationshipName>
    <type>Lookup</type>
</CustomField>