cncProd/force-app/main/default/objects/Outstanding_Accessory__c/fields/Sales_Agreement__c.field-meta.xml
<CustomField>
    <fullName>Sales_Agreement__c</fullName>
    <label>Sales Agreement</label>
    <referenceTo>Sales_Agreement__c</referenceTo>
    <relationshipLabel>Outstanding Accessories</relationshipLabel>
    <relationshipName>Outstanding_Accessories</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>