cncProd/force-app/main/default/objects/Outstanding_Accessory__c/fields/Unique_Key__c.field-meta.xml
<CustomField>
    <fullName>Unique_Key__c</fullName>
    <caseSensitive>true</caseSensitive>
    <inlineHelpText>Unique Key for outstanding accessories</inlineHelpText>
    <label>Unique Key</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>